2007-02-20  Juanma Barranquero  <lekktu@gmail.com>

	* smtpmail.el (smtpmail-smtp-service, smtpmail-queue-index-file):
	Fix typos in docstrings.
	(smtpmail-local-domain, smtpmail-queue-mail): Doc fixes.

2007-01-06  Simon Josefsson  <simon@josefsson.org>

	* README: Mention that smtpmail.el doesn't work on XEmacs.

2006-11-24  Eli Zaretskii  <eliz@gnu.org>

	* smtpmail.el (smtpmail-send-it):
	Copy buffer-file-coding-system from the mail buffer.  Possibly add a
	MIME header for the message encoding.
	Bind coding-system-for-write around the call to mail-do-fcc.
	Use smtpmail-code-conv-from to encode queued mail messages.

2006-10-02  MIYOSHI Masanori <miyoshi@meadowy.org>  (tiny change)

	* smtpmail.el (smtpmail-try-auth-methods): Fix typo in
	2006-09-28 commit.

2006-09-28  Osamu Yamane  <yamane@green.ocn.ne.jp> (tiny change)

	* smtpmail.el (smtpmail-try-auth-methods): Do not break long
	lines in base64-encoded authentication response.

2006-09-04  Chong Yidong  <cyd@stupidchicken.com>

	* sendmail.el (sendmail-program): Moved here from pathe.el.

2006-06-15  Chong Yidong  <cyd@stupidchicken.com>

	* sendmail.el (mail-send): Search explicitly for
	mail-header-separator when checking for corrupted header lines.

2006-02-11  Miles Bader  <miles@gnu.org>

	* sendmail.el, smtpmail.el: New files, from Emacs tree.

2005-05-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* hashcash.el (hashcash): New custom group.
	(hashcash-default-payment): Add :group.
	(hashcash-payment-alist): Ditto.
	(hashcash-default-accept-payment): Ditto.
	(hashcash-accept-resources): Ditto.
	(hashcash-path): Ditto.
	(hashcash-extra-generate-parameters): Ditto.
	(hashcash-double-spend-database): Ditto.
	(hashcash-in-news): Ditto.

	* nnir.el (nnir): Add :group.

2005-03-13  Steve Youngs  <steve@sxemacs.org>

	* gpg.el: Add timer/itimer compatibility.

2003-11-15  Simon Josefsson  <jas@extundo.com>

	* starttls.el: Sync with recent gnu.emacs.sources post.
